--- a/MoodMinder/front/vite/src/screens/Signup/Signup.css
+++ b/MoodMinder/front/vite/src/screens/Signup/Signup.css
@@ -82,11 +82,58 @@
 
 .has-account {
   font-size: 10pt;
-  padding: 1rem;
   color: #797979;
 
   & span {
     color: blueviolet;
     cursor: pointer;
   }
+}
+
+.underline {
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 12px;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  border-radius: 1px;
+}
+
+.left-u {
+  height: 1px;
+  margin-right: 11px;
+  margin-left: 11px;
+  -webkit-box-flex: 1;
+  flex: 1 1 0%;
+  background-image: linear-gradient(
+    90deg,
+    rgba(233, 237, 241, 0) 35%,
+    rgb(161, 165, 190)
+  );
+  border-radius: 2px;
+}
+
+p {
+  display: flex;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 10pt;
+}
+
+.right-u {
+  display: block;
+  height: 1px;
+  margin-right: 11px;
+  margin-left: 11px;
+  flex: 1 1 0%;
+  background-image: linear-gradient(
+    90deg,
+    rgba(233, 237, 241, 0) 35%,
+    rgb(161, 165, 190)
+  );
+  transform: rotate(180deg);
+  border-radius: 2px;
 }
