add: bottom nav e slider

--- a/MoodMinder/front/vite/src/screens/Login/Login.css
+++ b/MoodMinder/front/vite/src/screens/Login/Login.css
@@ -8,6 +8,14 @@
   }
 }
 
-.has-account {
+.no-has-account {
   padding: 1rem;
+  font-size: 10pt;
+  color: #797979;
+
+  & span {
+    color: blueviolet;
+    cursor: pointer;
+  }
+  
 }
