--- a/MoodMinder/front/vite/src/App.css
+++ b/MoodMinder/front/vite/src/App.css
@@ -1,12 +1,5 @@
 #root {
-  max-width: 1280px;
+  width: 100vw;
   margin: 0 auto;
   text-align: center;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  width: calc(100vw - 280px);
-  box-sizing: border-box;
 }
