--- a/MoodMinder/front/vite/src/App.css
+++ b/MoodMinder/front/vite/src/App.css
@@ -3,16 +3,37 @@
   text-align: center;
 }
 
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+html {
+  font-size: 90%;
 }
 
-.text {
-  margin-bottom: 1rem;
-  font-size: 30px;
-  font-weight: 700;
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.container {
+  position: relative;
+  /* width: 95vw;
+  height: 95vh;
+  border-radius: 1rem; */
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  background-color: rgb(235, 235, 235);
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .inputs {
@@ -56,89 +77,13 @@
     border-radius: 10px;
     padding: 1rem;
     cursor: pointer;
-    background-color: #123142;
-    color: white;
+    /* background-color: #123142; */
+    color: black;
     height: 80%;
   }
 }
 
-.social-list {
+h1, h2 {
+  font-weight: 100;
   display: flex;
-  justify-content: center;
-  list-style: none;
-  padding: 0;
-
-  & li {
-    gap: 0.5rem;
-    display: flex;
-    cursor: pointer;
-    margin: 0 1em;
-    background-color: #797979;
-    padding: 1rem;
-    border-radius: 10px;
-  }
-
-  & svg {
-    justify-content: center;
-    text-align: center;
-    font-size: 1.5em;
-  }
-}
-
-.has-account {
-  font-size: 10pt;
-  color: #797979;
-
-  & span {
-    color: blueviolet;
-    cursor: pointer;
-  }
-}
-
-.underline {
-  display: flex;
-  width: 100%;
-  margin-top: 20px;
-  margin-bottom: 12px;
-  -webkit-box-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
-  border-radius: 1px;
-}
-
-.left-u {
-  height: 1px;
-  margin-right: 11px;
-  margin-left: 11px;
-  -webkit-box-flex: 1;
-  flex: 1 1 0%;
-  background-image: linear-gradient(
-    90deg,
-    rgba(233, 237, 241, 0) 35%,
-    rgb(161, 165, 190)
-  );
-  border-radius: 2px;
-}
-
-p {
-  display: flex;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  font-size: 10pt;
-}
-
-.right-u {
-  display: block;
-  height: 1px;
-  margin-right: 11px;
-  margin-left: 11px;
-  flex: 1 1 0%;
-  background-image: linear-gradient(
-    90deg,
-    rgba(233, 237, 241, 0) 35%,
-    rgb(161, 165, 190)
-  );
-  transform: rotate(180deg);
-  border-radius: 2px;
 }
