--- a/MoodMinder/front/vite/src/screens/patient/FollowUp/FollowUp.css
+++ b/MoodMinder/front/vite/src/screens/patient/FollowUp/FollowUp.css
@@ -5,14 +5,12 @@
     width: 100%; /* Largura do conteúdo interno */
     padding: 20px; /* Adicionando espaço interno */
     position: relative;
+    background-color: rgb(248, 248, 248);
   }
   
   h1 {
-    position: sticky;
-    top: 0;
-    background-color: #fff; /* Cor de fundo do cabeçalho */
+    /* background-color: #fff; Cor de fundo do cabeçalho */
     padding: 10px; /* Adicionando espaço interno ao cabeçalho */
-    z-index: 1; /* Certifique-se de que o cabeçalho esteja sobreposta ao conteúdo */
   }
   
   @media (min-width: 769px) {
