--- a/MoodMinder/front/vite/src/screens/patient/FollowUp/FollowUp.css
+++ b/MoodMinder/front/vite/src/screens/patient/FollowUp/FollowUp.css
@@ -27,6 +27,9 @@ box-sizing: border-box;
 @media (max-width: 769px) {
   h1 {
     margin-top: 40px;
+  }
+  
+  h1,h2 {
     font-size: medium;
   }
 
