--- a/MoodMinder/front/vite/src/App.css
+++ b/MoodMinder/front/vite/src/App.css
@@ -47,7 +47,7 @@ img {
 .input {
   display: flex;
   align-items: center;
-  width: 70%;
+  width: 100%;
   height: 50px;
   background-color: #eaeaea;
   border-radius: 5px;
@@ -64,6 +64,12 @@ img {
     border: none;
     outline: none;
     /* font-size: 12pt; */
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .input{
+    width: 50%;
   }
 }
 
